--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,7 +39,7 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform fmt   
-        run: terraform fmt -check
+        run: terraform fmt
         working-directory: ./terraform
 
       - name: Terraform validate
