--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -127,3 +127,5 @@ jobs:
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
         working-directory: ./terraform
+
+        ##rt4rt4rerewrfn
