--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,11 +69,29 @@ jobs:
           name: tfplan
           path: ./terraform/tfplan
 
+  convert-to-json:
+    runs-on: ubuntu-latest
+    needs: terraform
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: Download Terraform Plan
         uses: actions/download-artifact@v3
         with:
           name: tfplan
           path: ./terraform
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
 
       - name: Convert Terraform Plan to JSON
         run: terraform show -json ./terraform/tfplan > ./terraform/plan.json
