--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,16 +95,19 @@ jobs:
       - name: List Files in Terraform Directory
         run: ls -al ./terraform
 
+      - name: Ensure terraform directory exists
+        run: mkdir -p ./terraform
+
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
 
       - name: Convert Terraform Plan to JSON
-        run: terraform show -json ./terraform/tfplan > /home/runner/work/${{ github.repository }}/terraform/plan.json
+        run: terraform show -json ./terraform/tfplan > ./terraform/plan.json
         working-directory: ./terraform
 
       - name: Verify Plan JSON Output
-        run: cat /home/runner/work/${{ github.repository }}/terraform/plan.json
+        run: cat ./terraform/plan.json
         working-directory: ./terraform
 
       - name: OPA Policy Evaluation
