--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,7 +69,7 @@ jobs:
           name: tfplan
           path: ./terraform/tfplan
 
-  convert-to-json:
+  opa-policy-evaluation:
     runs-on: ubuntu-latest
     needs: terraform
     steps:
@@ -89,30 +89,10 @@ jobs:
           name: tfplan
           path: ./terraform
 
-      - name: Ensure terraform directory exists
-        run: |
-          mkdir -p ./terraform
-          ls -al ./terraform
-
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
-
-      - name: Convert Terraform Plan to JSON
-        run: terraform show -json ./terraform/tfplan > ./terraform/plan.json
-        working-directory: ./terraform
-
-      - name: Verify Plan JSON Output
-        run: cat ./terraform/plan.json
-        working-directory: ./terraform
-
       - name: OPA Policy Evaluation
-        # run: |
-        #  opa eval --format pretty --data ./terraform/policies/opa.rego \
-        #  --input ./terraform/plan.json "data.opa.deny"
         run: |
-         /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
-         --input ./terraform/plan.json "data.opa.deny"
+          /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
+          --input ./terraform/tfplan "data.opa.deny"
         # env:
         #   OPA_POLICY: ${{ secrets.OPA_POLICY }}  # Optional: Use this secret to fetch OPA policy from a secure location
 
