--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,24 +24,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws-region: us-east-2   
 
-    #   - name: Run tfsec
-    #     uses: aquasecurity/tfsec-action@v1.0.0
-
-    #   - name: Run Checkov
-    #     uses: bridgecrewio/checkov-action@v12
-    #     with:
-    #       directory: ./terraform
-
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.4.0
         with:
-          terraform_version: 1.6.0 
+          terraform_version: 1.6.0
 
       - name: Install OPA
         run: |
           curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v0.46.0/opa_linux_amd64
           chmod +x opa
           sudo mv opa /usr/local/bin/opa
+
+      - name: Check OPA Installation
+        run: which opa
 
       - name: Terraform Init
         run: terraform init
@@ -79,8 +74,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws-region: us-east-2
 
       - name: Download Terraform Plan
@@ -88,85 +83,14 @@ jobs:
         with:
           name: tfplan
           path: ./terraform
+
+      - name: Check OPA Installation
+        run: which opa
 
       - name: OPA Policy Evaluation
         run: |
           /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
           --input ./terraform/tfplan "data.opa.deny"
-        # env:
-        #   OPA_POLICY: ${{ secrets.OPA_POLICY }}  # Optional: Use this secret to fetch OPA policy from a secure location
-
-  apply:
-    needs: terraform
-    runs-on: ubuntu-latest
-    # environment:
-    #   name: production
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1.4.0
-        with:
-          terraform_version: 1.6.0
-
-      - name: Download Terraform Plan
-        uses: actions/download-artifact@v3
-        with:
-          name: tfplan
-          path: ./terraform
-
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
-        working-directory: ./terraform
-
-  destroy:
-    runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'destroy') || github.event_name == 'workflow_dispatch'  # Run this job if 'destroy' is in the commit message or manually triggered
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1.4.0
-        with:
-          terraform_version: 1.6.0
-
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./terraform
-
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve
-        working-directory: ./terraform
-
-    #   - name: Check and Retry Terraform Destroy
-#         run: |
-#           for i in {1..5}; do
-#             terraform destroy -auto-approve && break || (echo "State lock detected. Retrying in 10 seconds..." && sleep 10)
-#           done
-#         working-directory: ./terraform/infra
-
 
 
 
@@ -180,12 +104,12 @@ jobs:
 #       - main
 #       - dev
 #       - '*'
-#   workflow_dispatch: 
+#   workflow_dispatch:
 
 # jobs:
 #   terraform:
 #     runs-on: ubuntu-latest 
-#     if: "!contains(github.event.head_commit.message, 'destroy')"  #Prevent this job from running if 'destroy' is in the commit message
+#     if: "!contains(github.event.head_commit.message, 'destroy')"  # Prevent this job from running if 'destroy' is in the commit message
 
 #     steps:    
 #       - name: Checkout code
@@ -198,13 +122,13 @@ jobs:
 #           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
 #           aws-region: us-east-2   
 
-#       - name: Run tfsec
-#         uses: aquasecurity/tfsec-action@v1.0.0
+#     #   - name: Run tfsec
+#     #     uses: aquasecurity/tfsec-action@v1.0.0
 
-#       - name: Run Checkov
-#         uses: bridgecrewio/checkov-action@v12
-#         with:
-#           directory: ./terraform
+#     #   - name: Run Checkov
+#     #     uses: bridgecrewio/checkov-action@v12
+#     #     with:
+#     #       directory: ./terraform
 
 #       - name: Setup Terraform
 #         uses: hashicorp/setup-terraform@v1.4.0
@@ -242,6 +166,33 @@ jobs:
 #         with:
 #           name: tfplan
 #           path: ./terraform/tfplan
+
+#   opa-policy-evaluation:
+#     runs-on: ubuntu-latest
+#     needs: terraform
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-east-2
+
+#       - name: Download Terraform Plan
+#         uses: actions/download-artifact@v3
+#         with:
+#           name: tfplan
+#           path: ./terraform
+
+#       - name: OPA Policy Evaluation
+#         run: |
+#           /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
+#           --input ./terraform/tfplan "data.opa.deny"
+#         # env:
+#         #   OPA_POLICY: ${{ secrets.OPA_POLICY }}  # Optional: Use this secret to fetch OPA policy from a secure location
 
 #   apply:
 #     needs: terraform
@@ -307,10 +258,157 @@ jobs:
 #         run: terraform destroy -auto-approve
 #         working-directory: ./terraform
 
-
 #     #   - name: Check and Retry Terraform Destroy
 # #         run: |
 # #           for i in {1..5}; do
 # #             terraform destroy -auto-approve && break || (echo "State lock detected. Retrying in 10 seconds..." && sleep 10)
 # #           done
 # #         working-directory: ./terraform/infra
+
+
+
+
+
+
+# # name: terraform cicd pipeline
+
+# # on:
+# #   push:
+# #     branches:
+# #       - main
+# #       - dev
+# #       - '*'
+# #   workflow_dispatch: 
+
+# # jobs:
+# #   terraform:
+# #     runs-on: ubuntu-latest 
+# #     if: "!contains(github.event.head_commit.message, 'destroy')"  #Prevent this job from running if 'destroy' is in the commit message
+
+# #     steps:    
+# #       - name: Checkout code
+# #         uses: actions/checkout@v3
+
+# #       - name: Configure AWS Credentials
+# #         uses: aws-actions/configure-aws-credentials@v1
+# #         with:
+# #           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+# #           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+# #           aws-region: us-east-2   
+
+# #       - name: Run tfsec
+# #         uses: aquasecurity/tfsec-action@v1.0.0
+
+# #       - name: Run Checkov
+# #         uses: bridgecrewio/checkov-action@v12
+# #         with:
+# #           directory: ./terraform
+
+# #       - name: Setup Terraform
+# #         uses: hashicorp/setup-terraform@v1.4.0
+# #         with:
+# #           terraform_version: 1.6.0 
+
+# #       - name: Install OPA
+# #         run: |
+# #           curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v0.46.0/opa_linux_amd64
+# #           chmod +x opa
+# #           sudo mv opa /usr/local/bin/opa
+
+# #       - name: Terraform Init
+# #         run: terraform init
+# #         working-directory: ./terraform
+
+# #       - name: Terraform fmt   
+# #         run: terraform fmt
+# #         working-directory: ./terraform
+
+# #       - name: Terraform validate
+# #         run: terraform validate
+# #         working-directory: ./terraform
+
+# #       - name: Terraform Plan
+# #         run: terraform plan -out=tfplan
+# #         working-directory: ./terraform
+
+# #       - name: Output Terraform Plan 
+# #         run: terraform show tfplan
+# #         working-directory: ./terraform
+
+# #       - name: Upload Terraform Plan
+# #         uses: actions/upload-artifact@v3
+# #         with:
+# #           name: tfplan
+# #           path: ./terraform/tfplan
+
+# #   apply:
+# #     needs: terraform
+# #     runs-on: ubuntu-latest
+# #     # environment:
+# #     #   name: production
+
+# #     steps:
+# #       - name: Checkout code
+# #         uses: actions/checkout@v3
+
+# #       - name: Configure AWS Credentials
+# #         uses: aws-actions/configure-aws-credentials@v1
+# #         with:
+# #           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+# #           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+# #           aws-region: us-east-2
+
+# #       - name: Set up Terraform
+# #         uses: hashicorp/setup-terraform@v1.4.0
+# #         with:
+# #           terraform_version: 1.6.0
+
+# #       - name: Download Terraform Plan
+# #         uses: actions/download-artifact@v3
+# #         with:
+# #           name: tfplan
+# #           path: ./terraform
+
+# #       - name: Terraform Init
+# #         run: terraform init
+# #         working-directory: ./terraform
+
+# #       - name: Terraform Apply
+# #         run: terraform apply -auto-approve tfplan
+# #         working-directory: ./terraform
+
+# #   destroy:
+# #     runs-on: ubuntu-latest
+# #     if: contains(github.event.head_commit.message, 'destroy') || github.event_name == 'workflow_dispatch'  # Run this job if 'destroy' is in the commit message or manually triggered
+
+# #     steps:
+# #       - name: Checkout code
+# #         uses: actions/checkout@v3
+
+# #       - name: Configure AWS Credentials
+# #         uses: aws-actions/configure-aws-credentials@v1
+# #         with:
+# #           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+# #           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+# #           aws-region: us-east-2
+
+# #       - name: Set up Terraform
+# #         uses: hashicorp/setup-terraform@v1.4.0
+# #         with:
+# #           terraform_version: 1.6.0
+
+# #       - name: Terraform Init
+# #         run: terraform init
+# #         working-directory: ./terraform
+
+# #       - name: Terraform Destroy
+# #         run: terraform destroy -auto-approve
+# #         working-directory: ./terraform
+
+
+# #     #   - name: Check and Retry Terraform Destroy
+# # #         run: |
+# # #           for i in {1..5}; do
+# # #             terraform destroy -auto-approve && break || (echo "State lock detected. Retrying in 10 seconds..." && sleep 10)
+# # #           done
+# # #         working-directory: ./terraform/infra
