--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'destroy')"  # Prevent this job from running if 'destroy' is in the commit message
 
     steps:    
@@ -36,7 +36,9 @@ jobs:
           sudo mv opa /usr/local/bin/opa
 
       - name: Check OPA Installation
-        run: which opa
+        run: |
+          which opa || echo "OPA not found"
+          echo "PATH is: $PATH"
 
       - name: Terraform Init
         run: terraform init
@@ -85,12 +87,62 @@ jobs:
           path: ./terraform
 
       - name: Check OPA Installation
-        run: which opa
+        run: |
+          which opa || echo "OPA not found"
+          echo "PATH is: $PATH"
 
       - name: OPA Policy Evaluation
         run: |
           /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
           --input ./terraform/tfplan "data.opa.deny"
+
+  apply:
+    runs-on: ubuntu-latest
+    needs: opa-policy-evaluation
+    if: contains(github.event.head_commit.message, 'apply')  # Only run apply if 'apply' is in the commit message
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+          aws-region: us-east-2   
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve ./terraform/tfplan
+        working-directory: ./terraform
+
+  destroy:
+    runs-on: ubuntu-latest
+    needs: opa-policy-evaluation
+    if: contains(github.event.head_commit.message, 'destroy')  # Only run destroy if 'destroy' is in the commit message
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+          aws-region: us-east-2   
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
+        working-directory: ./terraform
 
 
 
