--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,10 +10,10 @@ on:
 
 jobs:
   terraform:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
     if: "!contains(github.event.head_commit.message, 'destroy')"  # Prevent this job from running if 'destroy' is in the commit message
 
-    steps:    
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -34,6 +34,7 @@ jobs:
           curl -L -o opa https://github.com/open-policy-agent/opa/releases/download/v0.46.0/opa_linux_amd64
           chmod +x opa
           sudo mv opa /usr/local/bin/opa
+          sudo ln -s /usr/local/bin/opa /usr/bin/opa   # Create a symlink in /usr/bin to ensure it's in the default PATH
 
       - name: Check OPA Installation
         run: |
@@ -66,9 +67,15 @@ jobs:
           name: tfplan
           path: ./terraform/tfplan
 
-  opa-policy-evaluation:
-    runs-on: ubuntu-latest
+      - name: OPA Policy Evaluation
+        run: |
+          /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
+          --input ./terraform/tfplan "data.opa.deny"
+
+  apply:
     needs: terraform
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -80,50 +87,28 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
           aws-region: us-east-2
 
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1.4.0
+        with:
+          terraform_version: 1.6.0
+
       - name: Download Terraform Plan
         uses: actions/download-artifact@v3
         with:
           name: tfplan
           path: ./terraform
 
-      - name: Check OPA Installation
-        run: |
-          which opa || echo "OPA not found"
-          echo "PATH is: $PATH"
-
-      - name: OPA Policy Evaluation
-        run: |
-          /usr/local/bin/opa eval --format pretty --data ./terraform/policies/opa.rego \
-          --input ./terraform/tfplan "data.opa.deny"
-
-  apply:
-    runs-on: ubuntu-latest
-    needs: opa-policy-evaluation
-    if: contains(github.event.head_commit.message, 'apply')  # Only run apply if 'apply' is in the commit message
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-2   
-
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve ./terraform/tfplan
+        run: terraform apply -auto-approve tfplan
         working-directory: ./terraform
 
   destroy:
     runs-on: ubuntu-latest
-    needs: opa-policy-evaluation
-    if: contains(github.event.head_commit.message, 'destroy')  # Only run destroy if 'destroy' is in the commit message
+    if: contains(github.event.head_commit.message, 'destroy') || github.event_name == 'workflow_dispatch'  # Run this job if 'destroy' is in the commit message or manually triggered
 
     steps:
       - name: Checkout code
@@ -134,7 +119,12 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-          aws-region: us-east-2   
+          aws-region: us-east-2
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1.4.0
+        with:
+          terraform_version: 1.6.0
 
       - name: Terraform Init
         run: terraform init
