--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -313,7 +313,4 @@ jobs:
 # #           for i in {1..5}; do
 # #             terraform destroy -auto-approve && break || (echo "State lock detected. Retrying in 10 seconds..." && sleep 10)
 # #           done
-# #         working-directory: ./terraform/infra
-
-##fedfefewf3cds
-##fkgfgkjvdfvm
+# #         working-direc
